Ansible/ACMKube/roles/prod/files/Kubernetes/addict-acm/addict-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addict-deployment
  namespace: addict
  labels:
    app: addict
spec:
  replicas: 2
  selector:
    matchLabels:
      app: addict
  template:
    metadata:
      labels:
        app: addict
    spec:
      containers:
        - image: christianbingman/addict-acm
          name: addict
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
