Ansible/ACMKube/roles/prod/files/Kubernetes/addict-acm/addict-service-http.yml
apiVersion: v1
kind: Service
metadata:
  name: addict-service-http
  namespace: addict
  labels:
    app: addict
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: addict
  type: ClusterIP
